# Hallucin

./: .gitignore  MARKET_READY_CHECKLIST.md  README.md
Hallucin/: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  basic_usage.py  detector_1.py  pyproject.toml  scorer.py  setup.py  splitter.py  test_detector.py
Hallucin/examples/: basic_usage.py
Hallucin/hallucination_detector/: __init__.py  __main__.py  detector.py  scorer.py  splitter.py  webapp.py
Hallucin/hallucination_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Hallucin/hallucination_detector/static/: app.js  style.css
Hallucin/hallucination_detector/templates/: index.html
Hallucin/tests/: test_detector.py  test_vercel_entrypoint.py  test_webapp.py
api/: __init__.py  index.py
hallucination_detector/static/: style.css
