[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "Detect hallucinations in LLM responses by grounding claims against source context."
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "spacy>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]