[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "Detect hallucinations in LLM responses by grounding claims against source context."
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "spacy>=3.7.0",
    "flask>=2.3.0",
]

[project.scripts]
hallucin = "hallucination_detector.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
